--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
@@ -10,6 +10,9 @@
           <a href="{{ element.url }}" target="_blank">link</a>
           
           {% if element.getCountFavorite %}
+            | <a href="{{ path('favorite_remove', { 'id': element.id, 'token': user.personalHash }) }}" >
+              {{ 'element.favorite.remove'|trans({}, 'elements') }}
+            </a>
           {% else %}
             | <a href="{{ path('favorite_add', { 'id': element.id, 'token': user.personalHash }) }}" >
               {{ 'element.favorite.add'|trans({}, 'elements') }}
