--- a/src/Muzich/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Registration/register.html.twig
@@ -7,8 +7,16 @@
     
     {% if form.get("errors")|length > 0 %}
     <ul class="error_list">
-      {% for key, error in form.get("errors") %}
+      {% for error in form.get("errors") %}
         <li>{{ error.messageTemplate|trans(error.messageParameters, 'validators') }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
+    
+    {% if registration_errors_pers|length > 0 %}
+    <ul class="error_list">
+      {% for error in registration_errors_pers %}
+        <li>{{ error }}</li>
       {% endfor %}
     </ul>
     {% endif %}
