--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -274,3 +274,19 @@ ul.inline li
   text-decoration: none;
   color: black;
 }
+
+.error_list
+{
+  font-size: 87%;
+  color: #dd0101;
+  
+  margin-left: 24px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  margin-right: 2px;
+}
+
+.error_list li
+{
+  list-style: url(/bundles/muzichcore/img/1323874685_warning.png);
+}
