Form change pass: récupération personaliser d'erreurs pour les afficher.

--- a/src/Muzich/UserBundle/Resources/views/Security/change_password_form.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Security/change_password_form.html.twig
@@ -1,20 +1,30 @@
+{% form_theme form 'MuzichCoreBundle:Form:errors.html.twig' %}
+
 {{ form_errors(form) }}
+
+{% if errors_pers|length > 0 %}
+<ul class="error_list">
+  {% for error in errors_pers %}
+    <li>{{ error }}</li>
+  {% endfor %}
+</ul>
+{% endif %}
     
   <div class="field">
-    {{ form_label(form.current, 'password.actual'|trans({}, 'userform')) }}
     {{ form_errors(form.current) }}
+    {{ form_label(form.current, 'password.actual'|trans({}, 'userform')) }}
     {{ form_widget(form.current) }}
   </div>
 
   <div class="field">
-    {{ form_label(form.new.first, 'password.new.first'|trans({}, 'userform')) }}
     {{ form_errors(form.new.first) }}
+    {{ form_label(form.new.first, 'password.new.first'|trans({}, 'userform')) }}
     {{ form_widget(form.new.first) }}
   </div>
 
   <div class="field">
-    {{ form_label(form.new.second, 'password.new.second'|trans({}, 'userform')) }}
     {{ form_errors(form.new.second) }}
+    {{ form_label(form.new.second, 'password.new.second'|trans({}, 'userform')) }}
     {{ form_widget(form.new.second) }}
   </div>
 
