Correction des tests.

--- a/src/Muzich/UserBundle/Resources/views/Security/change_password_form.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Security/change_password_form.html.twig
@@ -2,7 +2,7 @@
 
 {{ form_errors(form) }}
 
-{% if errors_pers|length > 0 %}
+{% if errors_pers is defined %}
 <ul class="error_list">
   {% for error in errors_pers %}
     <li>{{ error }}</li>
