Evolution #41: Sélection des tags dynamique (ajax)

--- a/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
@@ -14,10 +14,6 @@
   {{ form_widget(form.url) }}
 </div>
 
-<div class="field">
-  {{ form_errors(form.tags) }}
-  {{ form_label(form.tags, 'tags'|trans({}, 'elementform')) }}
-  {{ form_widget(form.tags) }}
-</div>
+{% include "MuzichCoreBundle:Tag:tagsPrompt.html.twig" with { 'form_name': form_name } %}
 
-{{ form_rest(form) }}
+{{ form_row(form._token) }}
