--- a/web/bundles/muzichcore/css/main.css
+++ b/web/bundles/muzichcore/css/main.css
@@ -290,3 +290,84 @@ ul.inline li
 {
   list-style: url(/bundles/muzichcore/img/1323874685_warning.png);
 }
+
+
+/*  (TMP) Debut CSS pour tags */
+
+pre code {background: #ccc; padding:2px 0; display: block; margin-top:4px;}
+.ui-autocomplete {
+font-size:12px;
+border:1px solid #ddd;
+background:#fff;
+list-style:none;
+position: absolute;
+cursor: default;
+}
+.ui-autocomplete li {margin:0;}
+.ui-autocomplete li a {display:block; padding:4px;}
+.ui-autocomplete li a.ui-state-hover,
+.ui-autocomplete li a:hover {background:#eee;} 
+
+/**/
+
+ul.tagbox {
+background: #fff;
+cursor: text;
+border: 1px solid #ccc;
+overflow: hidden;
+padding: 0 0 1px 3px;
+min-height:48px;
+}
+ul.tagbox li {
+margin:0;
+}
+ul.tagbox li.tag {
+float: left;
+line-height: 1;
+padding: 3px 6px;
+list-style-type: none;
+margin-top: 3px;
+margin-right: 3px;
+}
+ul.tagbox li.tag {
+-moz-border-radius: 2px;
+-webkit-border-radius: 2px;
+border-radius: 2px;
+display:block;
+font-size:13px;
+border: 1px solid #cad8f3;
+background: #dee7f8;
+padding: 2px;
+margin-bottom: 1px;
+padding-right: 15px;
+position: relative;
+}
+ul.tagbox li.input {display:block; float:left;}
+ul.tagbox input:focus {
+border-color: #fff;
+}
+ul.tagbox input {
+width: 50px;
+margin: 0;
+border: 0;
+outline: 0;
+line-height:1.2;
+padding: 3px 0;
+font-size:12px;
+}
+ul.tagbox a.close {
+position: absolute;
+right: 4px; top: 5px;
+display: block;
+text-indent:-9999px;
+cursor:pointer;
+width: 7px; height: 7px;
+font-size: 1px;
+background: url('/bundles/muzichcore/img/tag_close.gif');
+}
+ul.tagbox a.close:hover {
+background-position: 7px;
+} 
+
+
+/* Fin CSS pour tags */
