--- a/app/Resources/MuzichIndexBundle/views/layout.html.twig
+++ b/app/Resources/MuzichIndexBundle/views/layout.html.twig
@@ -3,6 +3,9 @@
 {% block css %}
 	<link href="{{ asset('bundles/muzichindex/css/index.css') }}" rel="stylesheet" media="screen" type="text/css" />
 {% endblock %}
+{% block js %}
+  <script src="{{ asset('bundles/muzichindex/js/index.js') }}" type="text/javascript"></script>
+{% endblock %}
 
 {% block main_content %}
     {% block content %}{% endblock %}
