--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
@@ -28,11 +28,11 @@
                   
           {% if element.getCountFavorite %}
             | <a href="{{ path('favorite_remove', { 'id': element.id, 'token': user.personalHash }) }}" >
-              {{ 'element.favorite.remove'|trans({}, 'elements') }}
+              <img src="{{ asset('bundles/muzichcore/img/favorite.png') }}" title="{{ 'element.favorite.remove'|trans({}, 'elements') }}" alt="{{ 'element.favorite.remove'|trans({}, 'elements') }}"/>
             </a>
           {% else %}
             | <a href="{{ path('favorite_add', { 'id': element.id, 'token': user.personalHash }) }}" >
-              {{ 'element.favorite.add'|trans({}, 'elements') }}
+              <img src="{{ asset('bundles/muzichcore/img/favorite_bw.png') }}" title="{{ 'element.favorite.add'|trans({}, 'elements') }}" alt="{{ 'element.favorite.add'|trans({}, 'elements') }}" />
             </a>
           {% endif %}
           
