wording identifiant translation.

--- a/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Show/showUser.html.twig
@@ -15,7 +15,7 @@
       {% if following %}
         {{ 'user.notfollow'|trans({}, 'users') }}
       {% else %}
-        {{ 'users.follow'|trans({}, 'users') }}
+        {{ 'user.follow'|trans({}, 'users') }}
       {% endif %}
     </a>
     
