--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
@@ -7,8 +7,11 @@
 
 <script language="javascript" type="text/javascript">
 
-  var taglist = new Array({{ tags|length }});
-  {% for i, tag in tags %}taglist[{{ i }}] = "{{ tag }}"; {% endfor %}
+  if (typeof(taglist) == 'undefined')
+  {
+    taglist = new Array({{ tags|length }});
+    {% for i, tag in tags %}taglist[{{ i }}] = "{{ tag }}"; {% endfor %}
+  }
   
   var taginit = new Array();
   {% if search_tags is defined %}
