CSS: bleu/blanc (pair/impair) dans la liste d'elements.

--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/default.html.twig
@@ -2,7 +2,7 @@
 {% if elements|length %}
   <ul class="elements">
     {% for element in elements %} 
-      <li class="element" id="element_{{ element.id }}">
+      <li class="element {% if loop.index0 is even %}even{% else %}odd{% endif %}" id="element_{{ element.id }}">
         
         {% if element.embed %}
           <img src="{{ asset('bundles/muzichcore/img/1324917083_player.png') }}" alt="player" />
