tests: mise en place des champs tags lorsque l'on est en test.

--- a/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Element/form.add.html.twig
@@ -14,6 +14,10 @@
   {{ form_widget(form.url) }}
 </div>
 
-{% include "MuzichCoreBundle:Tag:tagsPrompt.html.twig" with { 'form_name': form_name } %}
+{% if  app.environment != 'test' %}
+  {% include "MuzichCoreBundle:Tag:tagsPrompt.html.twig" with { 'form_name': form_name } %}
+{% else %}
+  {{ form_row(form.tags) }}
+{% endif %}
 
 {{ form_row(form._token) }}
