--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagFavoritesForm.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagFavoritesForm.html.twig
@@ -2,10 +2,14 @@
   
   {{ form_errors(form) }}
 
-  {% include "MuzichCoreBundle:Tag:tagsPrompt.html.twig" with { 
-    'form_name'   : form_name,
-    'search_tags' : favorite_tags_id
-  } %}
+  {% if  app.environment != 'test' %}
+    {% include "MuzichCoreBundle:Tag:tagsPrompt.html.twig" with { 
+      'form_name'   : form_name,
+      'search_tags' : favorite_tags_id
+    } %}
+  {% else %}
+    {{ form_row(form.tags) }}
+  {% endif %}
 
   {{ form_row(form._token) }}
 
