--- a/src/Muzich/GroupBundle/Resources/views/Default/myList.html.twig
+++ b/src/Muzich/GroupBundle/Resources/views/Default/myList.html.twig
@@ -26,7 +26,7 @@
 
   <form action="{{ path('group_add') }}" method="post" {{ form_enctype(form_new) }}>
     
-    {% include "MuzichGroupBundle:Form:form.html.twig" with { 'form': form_new } %}
+    {% include "MuzichGroupBundle:Form:form.html.twig" with { 'form': form_new, 'form_name': form_new_name } %}
 
     <input type="submit" />
   </form>
