Evolution #60: Compléter le site de phrases d'aides

--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/form.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/form.html.twig
@@ -2,7 +2,11 @@
   
   {{ form_errors(search_form) }}
 
-  {{ form_row(search_form.network) }}
+  <div class="field">
+    {{ form_errors(search_form.network) }}
+    {{ form_label(search_form.network, 'filter.network'|trans({}, 'userui')) }}
+    {{ form_widget(search_form.network) }}
+  </div>
 
   {% include "MuzichCoreBundle:Tag:tagsPrompt.html.twig" with { 'form_name': form_name } %}
   
