--- a/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/Tag/tagsPrompt.html.twig
@@ -1,7 +1,7 @@
 
 
 <div class="tags_prompt" id="tags_prompt_{{ form_name }}">
-  {{ 'tags'|trans({}, 'userui') }}: 
+  <span class="help">{{ 'tags.help'|trans({}, 'userui') }}</span>
    <input class="tags_prompt_list" id="tags_prompt_list_{{ form_name }}" name="tags" value=""> 
 </div>
 
