--- a/src/Muzich/UserBundle/Resources/views/User/start.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/User/start.html.twig
@@ -1,16 +1,16 @@
 {% extends "MuzichUserBundle::layout.html.twig" %}
 
-{% block title %}Inscription terminé{% endblock %}
+{% block title %}{{ 'start.title'|trans([], 'userui') }}{% endblock %}
 
 {% block content %}
 
-  <h2>Bienvenue sur Muzich !</h2>
+  <h2>{{ 'start.titleh2'|trans([], 'userui') }}</h2>
   
   <p>
-    Bla bla bla ...
+    {{ 'start.description'|trans([], 'userui') }}</h2>
   </p>
   
-  <h3>Choisissez vos tags préférés</h3>
+  <h3>{{ 'start.tags.title'|trans([], 'userui') }}</h3>
   
   {% include "MuzichCoreBundle:Tag:tagFavoritesForm.html.twig" with { 
     'form'             : form_tags_favorites,
@@ -20,7 +20,7 @@
   } %}
   
   <p>
-    Vous pourrez egallement modifier vos tags préféré dans la partie 'mon compte'.
+    {{ 'start.tags.remind'|trans([], 'userui') }}
   </p>
       
 {% endblock %}
