Evolution #60: Compléter le site de phrases d'aides

--- a/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
+++ b/src/Muzich/MynetworkBundle/Resources/views/Mynetwork/index.html.twig
@@ -40,5 +40,17 @@
     {% endfor %}
     </ul>
   {% endif %}
+    
+  {% if followeds_users|length < 1  %}
+  {% if followeds_groups|length < 1 %}
+  {% if followers_users|length < 1 %}
+  
+    <br />
+    {{ 'nothing'|trans({}, 'network') }}
+    <br /><br />
+    
+  {% endif %}
+  {% endif %}
+  {% endif %}
 
 {% endblock %}
