Evolution #60 Compléter le site de phrases d'aides

--- a/src/Muzich/CoreBundle/Resources/views/SearchElement/form.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/SearchElement/form.html.twig
@@ -13,5 +13,5 @@
   {{ form_row(search_form.tags) }}
   {{ form_row(search_form._token) }}
 
-  <input type="submit" />
+  <input type="submit" value="{{ 'filter.submit'|trans({}, 'userui') }}"/>
 </form>
