--- a/src/Muzich/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/Muzich/UserBundle/Resources/views/Registration/register.html.twig
@@ -39,6 +39,14 @@
       {{ form_label(form.plainPassword.second, 'password.second'|trans({}, 'userform')) }}
       {{ form_widget(form.plainPassword.second) }}
     </div> 
+    
+    <span class="help">{{ 'help.token'|trans({}, 'userform') }}</span>
+    
+    <div class="field">
+      {{ form_errors(form.token) }}
+      {{ form_label(form.token, 'token'|trans({}, 'userform')) }}
+      {{ form_widget(form.token) }}
+    </div> 
 
     {{ form_rest(form) }}
     
