--- a/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
+++ b/src/Muzich/HomeBundle/Resources/views/Home/index.html.twig
@@ -25,10 +25,17 @@
     {{ 'home.add_element'|trans({}, 'navigationui') }} >>
   </a>
 
-  {% include "MuzichCoreBundle:SearchElement:form.html.twig" with { 
-    'form_name'      : search_form_name,
-    'search_tags'    : search_tags_id
-  } %}
+  <form action="{{ path('search_elements') }}" method="post" {{ form_enctype(search_form) }}>
+
+    {% include "MuzichCoreBundle:SearchElement:form.html.twig" with { 
+      'form_name'      : search_form_name,
+      'search_tags'    : search_tags_id
+    } %}
+
+    <span class="help">{{ 'tags_filter.help'|trans({}, 'userui') }}</span>
+    <br />
+    <input type="submit" value="{{ 'filter.submit'|trans({}, 'userui') }}"/>
+  </form>
 
   {% include "MuzichCoreBundle:SearchElement:default.html.twig" %}
     
