Evolution #65: Info en intro + pages statiques d'info

--- a/src/Muzich/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Muzich/CoreBundle/Resources/views/layout.html.twig
@@ -41,6 +41,9 @@
       <h3>{{ flash|trans({}, 'flash') }}</h3>
     </div>
   {% endfor %}
+  
+  {% include "MuzichCoreBundle:Info:container.html.twig" %}
+  
 </body>
 </html>
 
